--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@
 
 NotNull.customer.phoneNumber=Please enter phone number
 
-NotEmpty.customer.username=Please enter username
+NotEmpty.customer.userName=Please enter userName
 
 NotEmpty.customer.password=Please enter password
 
